# agent-todo-manager

./: .env.example  .gitignore  AGENTS.md  ATM_ADMIN_PLAN.md  CLAUDE.md  ISSUES.md  README.md  TODO.md  atm-skill-usage-plan.md  install.sh  pyproject.toml
.claude/skills/python-style/: SKILL.md
.claude/skills/testing-guidelines/: SKILL.md
api/: README.md  main.py  models.py  pyproject.toml
atm-admin/: pyproject.toml
atm-admin/src/atm_admin/: errors.py  main.py  output.py
atm-admin/src/atm_admin/commands/: projects.py  prune.py  steps.py  stories.py  tasks.py
atm-cli/: README.md  plan.md  pyproject.toml
atm-cli/src/atm_cli/: __init__.py  _env.py  config.py  db.py  main.py  output.py
atm-cli/src/atm_cli/commands/: _input.py  completions.py  project.py  projects.py  steps.py  stories.py  tasks.py
atm-cli/src/atm_cli/commands/admin/: __init__.py  projects.py  prune.py  self_update.py  serve.py  steps.py  stories.py  tasks.py
atm-cli/src/atm_cli/services/: _cascade.py  exceptions.py  project.py  steps.py  stories.py  tasks.py
atm-cli/tests/: conftest.py  test_cascade.py
dashboard/: README.md  pyproject.toml
dashboard/src/dashboard/: main.py
db/: README.md  REPO_REFERENCE.md  pyproject.toml  quick_reference.md  schema.md  seed.py
db/alembic/: env.py
db/alembic/versions/: 5ba6e56e1904_intial_commit.py  b3c4d5e6f7a8_add_definition_of_done_to_tasks_steps.py  (+2 more)
db/tests/: conftest.py  test_completion.py  test_project.py  test_step.py  test_story.py  test_task.py
gui/: README.md  index.html  package-lock.json  package.json
gui/examples/: sample_project.json  sample_project_log_processor.json
gui/src/: api.ts  main.ts  render-agents.ts  render-project.ts  render-utils.ts  render.test.ts  render.ts  style.css  types.ts
(+38 files in other folders)
