[project]
name = "atm-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "rich>=14.0.0",
    "db",
    "pydantic-settings>=2.13.1",
]

[tool.uv.sources]
db = { workspace = true }

[project.scripts]
atm = "atm_cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
