[project]
name = "dashboard"
version = "0.1.0"
description = "FastAPI app serving the agent todo manager GUI and read API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
db = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
